added json option

--- a/altair_plot_mols.ipynb
+++ b/altair_plot_mols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a513c9ee-8ea3-43b7-8ded-326e9efabb01",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9e22242d-ec29-416b-a981-56711f6b6bac",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "edaf2a83-cd4f-4965-aa7d-ab69eb789ced",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "4  3.52550    6    2   8  79.62      8      False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9385219d-a854-48d7-8c82-92ecf9edf3b5",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "644c6a21-4362-402e-8281-8c0de404a354",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7f42f35c-3d18-4c73-9bb5-b3cf6ff25954",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,8 @@
     "#chart.interactive()\n",
     "\n",
     "#save as html:\n",
-    "chart.interactive().save('scatterplot.html')\n"
+    "chart.interactive().save('scatterplot.html')\n",
+    "chart.save('scatterplot.json')"
    ]
   },
   {
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "78858fb0-e890-4f61-9999-186a640c8791",
    "metadata": {},
    "outputs": [],
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d507660b-93b3-4225-a3da-bd35d7c60b72",
    "metadata": {},
    "outputs": [],
@@ -293,8 +294,17 @@
     ").configure_view(\n",
     "    strokeOpacity=0\n",
     ")\n",
-    "ch.save('ylabels.html')"
+    "ch.save('ylabels.html')\n",
+    "ch.save('ylabels.json')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2173a5c-8973-44aa-9d86-df02a9abaadb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
